2019-02-08  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/bits/mathinline.h: Remove.

2019-02-08  Florian Weimer  <fweimer@redhat.com>

	math: Enable <bits/math-finite.h> sysdeps override, as used on ia64.
	* math/bits/math-finite.h: Move to ...
	* bits/math-finite.h: ... here.

2019-02-08  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/generic/bits/unistd_ext.h: Move to ...
	* bits/unistd_ext.h: here.

2019-02-08  Patsy Griffin Franklin  <pfrankli@redhat.com>

	[BZ #21915]
	* nss/Makefile (test-container): Add tst-nss-files-hosts-long.
	* nss/tst-nss-files-hosts-long.c: New file.
	* nss/tst-nss-files-hosts-long.root: New directory.
	* nss/tst-nss-files-hosts-long.root/etc: Likewise.
	* nss/tst-nss-files-hosts-long.root/etc/hosts: New file.

2019-02-08  Florian Weimer  <fweimer@redhat.com>

	* include/bits/unistd_ext.h: Remove file.
	* posix/bits/unistd_ext.h: Move to ...
	* sysdeps/generic/bits/unistd_ext.h: ... here.

2019-02-08  Florian Weimer  <fweimer@redhat.com>

	* include/bits/unistd_ext.h: New file.

2019-02-08  TAMUKI Shoichi  <tamuki@linet.gr.jp>

	* time/tst-strftime2.c: Use array_length macros instead of magic
	numbers.

2019-02-08  Florian Weimer  <fweimer@redhat.com>

	[BZ #24161]
	* sysdeps/nptl/fork.h (__run_fork_handlers): Add multiple_threads
	argument.
	* nptl/register-atfork.c (__run_fork_handlers): Only perform
	locking if the new do_locking argument is true.
	* sysdeps/nptl/fork.c (__libc_fork): Pass multiple_threads to
	__run_fork_handlers.

2019-02-08  Florian Weimer  <fweimer@redhat.com>

	[BZ #6399]
	Linux: Add gettid system call wrapper.
	* posix/Makefile (headers): Add bits/unistd_ext.h.
	* posix/bits/unistd_ext.h: New file.
	* posix/unistd.h: Include it.
	* manual/process.texi (Process Identification): Document gettid.
	* sysdeps/unix/sysv/linux/Makefile [subdir == misc] (tests): Add
	tst-gettid, tst-gettid-kill.
	(tst-gettid): Link with $(shared-thread-library).