@@ -1,3 +1,7 @@
+2019-02-11  TAMUKI Shoichi  <tamuki@linet.gr.jp>
+
+	* time/strftime_l.c: Fix a few whitespace arrangement inconsistencies.
+
 2019-02-08  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/powerpc/bits/mathinline.h: Remove.
